2008-05-05  Matthias Clasen  <mclasen@redhat.com>

	Apply a patch by Marek Kasik <mkasik@redhat.com> to display
	more printer status information in the print dialog. 

	* modules/printbackends/cups/gtkprintbackendcups.c: Translate
	printer-state-reasons into suitable messages and icons.

	* gtk/stock-icons/16/gtk-print-error.{svg,png}:
	* gtk/stock-icons/16/gtk-print-report.{svg,png}:
	* gtk/stock-icons/16/gtk-print-warning.{svg,png}:
	* gtk/Makefile.am: 
	* gtk/gtkiconfactory.c:
	* gtk/gtkstock.h: New stock icons to display printer state.

2008-05-07  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkinternals.h
	* gdk/gdkevents.c
	* gdk/directfb/gdkevents-directfb.c
	* gdk/quartz/gdkevents-quartz.c
	* gdk/win32/gdkevents-win32.c
	* gdk/x11/gdkevents-x11.c (_gdk_windowing_event_data_copy):
	order parameters src,dest and make src const.

2008-05-06  Richard Hult  <richard@imendio.com>

	* gdk/gdkevents.c: (gdk_event_copy), (gdk_event_free):
	* gdk/gdkinternals.h: Add private backend data to events, and
	handle it when copying/freeing events. Currently only needed in
	the quartz backend.

	* gdk/directfb/gdkevents-directfb.c:
	* gdk/quartz/gdkevents-quartz.c:
	* gdk/win32/gdkevents-win32.c:
	* gdk/x11/gdkevents-x11.c: (_gdk_windowing_event_data_copy)
	(_gdk_windowing_event_data_free): Add stubs for X11, win32 and
	directfb. Implement for quartz. Part of fixing bug #473822.

2008-05-05  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkmain-quartz.c (_gdk_windowing_init): Initalize
	framework if there is one.

2008-05-05  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcellrenderercombo.h
	* gtk/gtkcellrendererspin.h
	* gtk/gtkfilechooserbutton.h: style cleanups for the sake of
	consistency.

	* gtk/gtkfilechooserdialog.h
	* gtk/gtkfilechooserwidget.h
	* gtk/gtkscalebutton.h: reorder instance and class structs to be
	in canonical order.

2008-05-04  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkkeys-quartz.c (maybe_update_keymap): Check if